--- a/templates/register.html
+++ b/templates/register.html
@@ -7,19 +7,19 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="firstname" placeholder="First Name" type="text" Style="width: 300px;"/>
+            <input autocomplete="off" autofocus class="form-control" name="firstname" placeholder="First Name" type="text"/>
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="lastname" placeholder="Last Name" type="text" Style="width: 300px;"/>
+            <input autocomplete="off" class="form-control" name="lastname" placeholder="Last Name" type="text"/>
         </div>
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" Style="width: 300px;"/>
+            <input autocomplete="off" class="form-control" name="username" placeholder="Username" type="text"/>
         </div>
         <div class="form-group">
-            <input autocomplete="off" class="form-control" name="password" placeholder="Password" type="password" Style="width: 300px;"/>
+            <input autocomplete="off" class="form-control" name="password" placeholder="Password" type="password"/>
         </div>
         <div class="form-group">
-            <input autocomplete="off" class="form-control" name="confirmation" placeholder="Password (again)" type="password" Style="width: 300px;"/>
+            <input autocomplete="off" class="form-control" name="confirmation" placeholder="Password (again)" type="password"/>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
