--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"><span class="blue">done</span><span class="blue">&</span><span class="green"><i>done</i></span></a>
+            <a class="navbar-brand" href="/"><span class="blue">done</span><span class="blue">&</span><span class="orange"><i>done</i></span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -39,6 +39,9 @@
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/goals">Goals</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/lists">Lists</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/completed">Completed</a>
