--- a/templates/new_list.html
+++ b/templates/new_list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    New ToDo
+    New List
 {% endblock %}
 
 {% block main %}
@@ -9,12 +9,12 @@
     <!-- app's own JavaScript -->
     <script src="/static/scripts.js"></script>
 
-    <h1 class="display-5">Create a ToDo!</h1>
+    <h1 class="display-5">Create a List!</h1>
     <span style="display:inline-block; height: 40px;width: 100%;"></span>
 
-    <form action="/new" method="post">
+    <form action="/lists/new_list" method="post">
         <div class="form-group">
-            <input name="reminder" autocomplete="off" autofocus class="form-control" placeholder="To Do" type="text" Style="width: 300px;"/>
+            <input name="list" autocomplete="off" autofocus class="form-control" placeholder="List" type="text" Style="width: 300px;"/>
         </div>
         <div class="form-group">
             <textarea name="details"class="form-control" autocomplete="off" rows="5" placeholder="Details (optional)" Style="width: 300px;"></textarea>
