--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,9 @@
             <input autocomplete="off" class="form-control" name="lastname" placeholder="Last Name" type="text"/>
         </div>
         <div class="form-group">
+            <input autocomplete="off" class="form-control" name="email" placeholder="Email" type="text"/>
+        </div>
+        <div class="form-group">
             <input autocomplete="off" class="form-control" name="username" placeholder="Username" type="text"/>
         </div>
         <div class="form-group">
