--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,14 +10,13 @@
 
         <!-- documentation at http://getbootstrap.com/docs/4.0/, alternative themes at https://bootswatch.com/4-alpha/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
-        <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>-->
 
         <link href="/static/styles.css" rel="stylesheet"/>
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 
         <title>Done&Done: {% block title %}{% endblock %}</title>
@@ -35,7 +34,7 @@
                 {% if session.user_id %}
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">ToDo's<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/goals">Goals</a>
