--- a/templates/lists.html
+++ b/templates/lists.html
@@ -15,6 +15,9 @@
 
 
     <h1 class="display-5">My Lists</h1>
+    <p class="lead">
+        Click on a list to expand its items
+    </p>
 
     <span style="display:inline-block; height: 40px;width: 100%;"></span>
 
@@ -63,7 +66,7 @@
             <table class="table">
                 <thead class="thead-light">
                     <tr>
-                        <th colspan="4" align="center">You have no lists</td>
+                        <th colspan="4" align="center">You have no lists. <a href="lists/new_list">Add</a> some?</td>
                     </tr>
                 </thead>
             </table>
