--- a/templates/goals.html
+++ b/templates/goals.html
@@ -12,6 +12,9 @@
     <script src="/static/goals.js"></script>
 
     <h1 class="display-5">Long-term goals</h1>
+    <p class="lead">
+        Here's where you have your goals, dreams and aspirations - big or small.
+    </p>
 
     <span style="display:inline-block; height: 40px;width: 100%;"></span>
 
@@ -51,7 +54,7 @@
                 </form>
             {% else %}
                 <tr>
-                    <td colspan="4" align="center">You have no items on your goals</td>
+                    <td colspan="4">You have no items on your Goals list. <a href="/new_goal">Add</a> some?</tr>;
                 </tr>
             {% endif %}
         </tbody>
