--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,6 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+    <br>
+    <p>Not a member? <a href="/register">Register</a></p>
 {% endblock %}
