--- a/templates/register.html
+++ b/templates/register.html
@@ -26,4 +26,6 @@
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
+    <br>
+    <p>Already have an account? <a href="/login">Log in</a></p>
 {% endblock %}
