--- a/templates/goals.html
+++ b/templates/goals.html
@@ -54,7 +54,7 @@
                 </form>
             {% else %}
                 <tr>
-                    <td colspan="4">You have no items on your Goals list. <a href="/new_goal">Add</a> some?</tr>;
+                    <td colspan="4">You have no items on your Goals list. <a href="/new_goal">Add</a> some?</tr>
                 </tr>
             {% endif %}
         </tbody>
