--- a/templates/goals.html
+++ b/templates/goals.html
@@ -13,7 +13,7 @@
 
     <h1 class="display-5">Long-term goals</h1>
     <p class="lead">
-        Here's where you have your goals, dreams and aspirations - big or small.
+        Here's where you have your goals, dreams and aspirations - big or small
     </p>
 
     <span style="display:inline-block; height: 40px;width: 100%;"></span>
