delete details from completed

--- a/templates/lists.html
+++ b/templates/lists.html
@@ -76,7 +76,7 @@
             <button type="submit" id="mark_completed_items" class="btn btn-secondary btn-md center-block" Style="width: 170px;">Mark as completed</button>
         </div>
         <div style="float: right;">
-            <button type="submit" id="delete_item" class="btn btn-danger" Style="width: 170px;">Delete Items</button>
+            <button type="submit" id="delete_item" class="btn btn-danger" Style="width: 170px;">Delete Item(s)</button>
             <span style="display:inline-block; height: 40px;width: 100%;"></span>
             <form action="/lists/delete" method="get">
                 <button type="submit" id="delete_list" class="btn btn-danger" Style="width: 170px;">Delete List</button>
